--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/Jos-Shan/Codequeen-project#readme",
   "dependencies": {
+    "body": "^5.1.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
+    "Parser": "^0.0.1",
     "validator": "^13.5.2"
   }
 }
