--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,14 @@
     "body": "^5.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
-    "nodemon": "^2.0.7",
     "Parser": "^0.0.1",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.7"
   }
 }
